# CanvasSynch

CanvasSynch/: .gitignore  README.md  main.py  pyproject.toml
CanvasSynch/app/: __init__.py  api.py  cli.py  main.py
CanvasSynch/app/canvas/: __init__.py  api.py  bearer_token.py
CanvasSynch/app/models/: __init__.py  assignment.py  base.py  courses.py  submission.py  user.py
CanvasSynch/app/scripts/: generate_test_static.py  get_canvas_courses.py
CanvasSynch/app/synch/: assignment.py  canvas.py  course.py  user.py
